<resources>
    <string name="app_name">SMSrc</string>
    <string name="open_nav">OPEN</string>
    <string name="close_nav">CLOSE</string>
    <string name="username">Username: </string>
    <string name="userrole">UserRole: </string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="send">Send</string>

    <!--  Device Admin  -->
    <string name="device_admin_label">Device Admin</string>
    <string name="device_admin_description">Device Admin Description</string>
    <string name="device_admin_Activity">Device Admin Activity</string>

    <!--  Commands  -->
    <string name="play_sound">Play Sound</string>
    <string name="change_mode">Change Mode</string>
    <string name="lock_phone">Lock Phone</string>
    <string name="wipe_data">Wipe Data</string>
    <string name="encrypt_storage">Encrypt Storage</string>
    <string name="disable_camera">Disable Camera</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_commands">Commands</string>
    <string name="menu_users">Users</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!--  Login and Signup  -->
    <string name="header_login">LogIn</string>
    <string name="btn_log_in">Log In</string>
    <string name="btn_sign_up">SignUp</string>
    <string name="header_signup">Sign Up</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="old_pin">Old Pin</string>
    <string name="new_pin">New Pin</string>
    <string name="confirm_new_pin">Confirm New Pin</string>
    <string name="submit">Submit</string>
    <string name="change_pin">Change Pin</string>
    <string name="logout">Logout</string>
    <string name="is_alive">Is Alive</string>
    <string name="restore_state">Restore State</string>
    <string name="restore_phone_notice">Restoring device state will attempt to revert all executed commands. In order to
    do so, you need to provide some authentication</string>
    <string name="restore_device">Restore Device</string>
    <string name="pin_code">Pin Code</string>
    <string name="delete">DELETE</string>
</resources>
