<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".commands.views.fragments.CommandFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundGravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingBottom="32dp">
            <Button
                android:id="@+id/play_sound_button"
                android:layout_width="159dp"
                android:layout_height="53dp"
                android:text="@string/play_sound"
                android:layout_marginTop="32dp"/>

            <Button
                android:id="@+id/change_mode_button"
                android:layout_width="159dp"
                android:layout_height="53dp"
                android:text="@string/change_mode"
                android:layout_marginTop="32dp"/>

            <Button
                android:id="@+id/lock_phone_button"
                android:layout_width="159dp"
                android:layout_height="53dp"
                android:text="@string/lock_phone"
                android:layout_marginTop="32dp"/>

            <Button
                android:id="@+id/wipe_data_button"
                android:layout_width="159dp"
                android:layout_height="53dp"
                android:text="@string/wipe_data"
                android:layout_marginTop="32dp"/>

            <Button
                android:id="@+id/encrypt_storage_button"
                android:layout_width="159dp"
                android:layout_height="53dp"
                android:text="@string/encrypt_storage"
                android:layout_marginTop="32dp"/>

            <Button
                android:id="@+id/disable_camera_button"
                android:layout_width="159dp"
                android:layout_height="53dp"
                android:text="@string/disable_camera"
                android:layout_marginTop="32dp"/>

            <Button
                android:id="@+id/is_alive_button"
                android:layout_width="159dp"
                android:layout_height="53dp"
                android:text="@string/is_alive"
                android:layout_marginTop="32dp"/>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>