<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#DA4D4D"
    tools:context=".signin.views.fragments.SigninFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/header_signup"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/username_signup"
        android:layout_width="260dp"
        android:layout_height="0dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/audiowide"
        android:hint="@string/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_signup"
        android:layout_width="260dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/audiowide"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_signup" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/confirm_password_signup"
        android:layout_width="260dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/audiowide"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_signup" />

    <Button
        android:id="@+id/btn_navigate_users"
        android:layout_width="109dp"
        android:layout_height="54dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/btn_sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_signup" />

    <Button
        android:id="@+id/btn_navigate_signin"
        android:layout_width="178dp"
        android:layout_height="57dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/already_have_an_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_navigate_users"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_signup" />

</androidx.constraintlayout.widget.ConstraintLayout>