<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".commands.views.fragments.ChangePinCodeFragment">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/change_pin_number"
        android:layout_width="257dp"
        android:layout_height="59dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/audiowide"
        android:hint="@string/phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/change_pin_username"
        android:layout_width="257dp"
        android:layout_height="59dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/audiowide"
        android:hint="@string/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_pin_number" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/change_pin_password"
        android:layout_width="257dp"
        android:layout_height="59dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/audiowide"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_pin_username" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/change_pin_code"
        android:layout_width="257dp"
        android:layout_height="59dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/audiowide"
        android:hint="@string/pin_code"
        android:maxLength="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_pin_password" />

    <Button
        android:id="@+id/change_pin_send"
        android:layout_width="117dp"
        android:layout_height="58dp"
        android:layout_marginTop="68dp"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_pin_code"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>