<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".restore.views.RestoreStateFragment">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="252dp"
        android:layout_height="90dp"
        android:layout_marginTop="40dp"
        android:text="@string/restore_phone_notice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/pin"
        android:layout_width="257dp"
        android:layout_height="59dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/audiowide"
        android:hint="@string/pin_code"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:layout_width="257dp"
        android:layout_height="59dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/audiowide"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pin" />

    <Button
        android:id="@+id/restore_state_btn"
        android:layout_width="175dp"
        android:layout_height="59dp"
        android:layout_marginTop="36dp"
        android:text="@string/restore_device"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />


</androidx.constraintlayout.widget.ConstraintLayout>