<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".users.views.fragments.UserEditFragment">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/user_name"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="188dp"
        android:fontFamily="@font/audiowide"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="208dp"
        android:text="@string/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/user_role_spinner"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/audiowide"
        android:spinnerMode="dropdown"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/user_name" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="56dp"
        android:text="@string/userrole"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="120dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_role_spinner"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>